<resources>
    <string name="app_name">Exo_01_Interface_Login</string>
    <string name="title_login">Login</string>
    <string name="label_username">Username :</string>
    <string name="hint_username">Your username</string>
    <string name="label_password">Password :</string>
    <string name="hint_password">Your password</string>
    <string name="btn_login">Login</string>
    <string name="btn_reset">Reset</string>
    <string name="toast_login_error">Bad credential :(</string>
    <string name="toast_login_welcome">Welcome %s !</string>
    <string name="title_register">Register</string>
    <string name="label_address">Address</string>
    <string name="hint_address_street">Your street</string>
    <string name="hint_address_number">No</string>
    <string name="hint_address_city">Your city</string>
    <string name="hint_address_postalcode">Postal Code</string>
    <string name="hint_address_country">Your country</string>
    <string name="btn_register">Register</string>
    <string name="label_mail">E-mail :</string>
    <string name="hint_mail">Your e-mail</string>
    <string name="hint_password_confirm">Confirm your password</string>
    <string name="msg_no_register">No account. Click here</string>
</resources>